fix footer h align on lg screens

--- a/style/shared.css
+++ b/style/shared.css
@@ -843,3 +843,9 @@ footer a:hover {
     margin:0;
   }
 }
+
+@media (min-width: 1200px) {
+  .footer-content {
+    margin: 0 auto;
+  }
+}
